hphp/test/zend7/Zend/tests/closure_022.php.expectf

Fatal error: %s
Stack trace:
#0 {main}
  thrown in %sclosure_022.php on line 5